Sonar clean up changes